<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <TextView
                android:id="@+id/text_welcome_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                tools:text="Good morning!"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" android:textAllCaps="true"/>

        <TextView
                android:id="@+id/textView7"
                android:text="@string/choose_the_active_substance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_welcome_greeting"
                android:layout_marginTop="16dp" android:textStyle="normal" android:textAllCaps="true"/>

        <HorizontalScrollView
                android:id="@+id/chips_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_medicines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:singleLine="true"
                    app:singleSelection="true">

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip_ibuprofen"
                        style="@style/ChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/ibuprofen"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip_paracetamol"
                        style="@style/ChipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/paracetamol"/>

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <TextView
                android:id="@+id/textView8"
                android:text="@string/enter_medicine_concentration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/chips_root"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/image_substance_help"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:textAllCaps="true"/>

        <ImageView
                android:id="@+id/image_substance_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_help_24dp"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/get_more_info_about_substance_concetration"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_substance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:hint="@string/substance_mg"
                tools:hint="subst"
                app:layout_constraintTop_toBottomOf="@id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_substance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/edit_text_medicine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:hint="@string/medicine_ml"
                tools:hint="med"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_substance" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/edit_text_mass"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/textView5"
                android:text="@string/enter_body_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/image_weight_help"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_medicine" android:layout_marginTop="16dp"
                android:textAllCaps="true"/>

        <ImageView
                android:id="@+id/image_weight_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_help_24dp"
                android:contentDescription="@string/get_more_info_about_substance_concetration"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:hint="@string/weight_kg"
                tools:hint="weight"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>