<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_marginBottom="?attr/actionBarSize">

        <include layout="@layout/content_main"/>

    </FrameLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calculate_doses"
            android:layout_margin="8dp"
            android:text="@string/calculate"
            app:icon="@drawable/ic_done_white_24dp"
            app:layout_anchor="@id/bottom_app_bar"
            android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>