...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="io.github.omisie11.dosecalculator.ResultBottomSheetFragment">


    <TextView
            android:id="@+id/text_alert_disclaimer"
            android:text="@string/result_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
...
